change the temporary file path to solve the administrtor mode problem